--- a/app/views/browse/index.html.erb
+++ b/app/views/browse/index.html.erb
@@ -123,7 +123,7 @@
       			<tr class="media">
       				<td><%= i %></td>
     	     		<td>
-    	     			<div class="regular-text a:visited"><%= link_to o.opptyName, o %></div>
+    	     			<div class="regular-text"><%= link_to o.opptyName, o %></div>
     	     			<div class="little-text"><%= o.slComments %></div>
     	     		</td>
         		 	<td><%= o.proposalDueDate.to_s %></td>
