--- a/app/views/browse/index.html.erb
+++ b/app/views/browse/index.html.erb
@@ -14,14 +14,14 @@
 			</tr>
 			</table>
 
-			<%# Radio Buttons in Browse page to limit the search to opportunities within 30, 60, or 90 days %>
+			<!-- Radio Buttons in Browse page to limit the search to opportunities within 30, 60, or 90 days -->
             <div class="form">
             <table>
             	<tr>
-            	<div class="col-md-12">
-            		<td class="col-md-2">
+            	<div class="col-md-9">
+            		<td class="col-md-1">
                 		<label class="control-label black-text">
-                    		within:
+                    		Within:
                 		</label>
             		</td>
 
@@ -35,29 +35,27 @@
                 		<label class="toggle-btn noscript radio black-text">
                     		<input name="group2" type="radio">90 Days
                 		</label>
-                	</td>
+                </td>
                 </div>
 
-                	<%# drop down menu in Browse Page to sort the opportunities by a specific field %>
-                <div class="col-md-12">
-                	<td class="col-md-2">
+                	<!-- drop down menu in Browse Page to sort the opportunities by a specific field -->
+                <div class="col-md-2">
+                	<td class="col-md-1">
                 		<label class="black-text">
                     		Sort By:
                 		</label>
-            		</td>
-
-                	<td>
-						<div>
-            				<select class="selector col-md-6">
+            		  </td>
+                	<td class="col-md-3">
+						        <div>
+            				  <select class="selector col-md-9">
               					<option value="1">Days Left</option>
               					<option value="2015">Writer's Names</option>
               					<option value="2014">Manager's Names</option>
-            				</select>
-            				<a href="#" class="btn btn-info btn-lg glyphicon selector-button">&#xe092;</a>
-          				</div>  
+            				  </select>
+            				  <a href="#" class="btn btn-info btn-lg glyphicon selector-button">&#xe092;</a>
+          				  </div>  
                 	</td>
                 </div>
-
             	</tr>
 
 
