--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-
+  <%= javascript_include_tag('bootstrap-notify.min.js') %>
+  <%= javascript_include_tag('jquery.growl.js') %>
 </head>
 <body class='<%=controller.controller_name%>'>
 <head>
@@ -41,7 +42,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li ><a>Welcome <%=session[:username] %></a></li>
-          <li class="tab nav-notifications"><a href="./notifications.html"><img src="/assets/notif-bell-2.png" height="30" width="30" style="padding-bottom: 5px"></a></li>
+          <li class="tab nav-notifications"><a href="#notifications" name="notificationIcon"><img src="/assets/notif-bell-2.png" height="30" width="30" style="padding-bottom: 5px"></a></li>
           <li><a href=<%=sessions_destroy_path %>>Logout</a><li>
         </ul>
       </div><!--/.nav-collapse -->
@@ -55,5 +56,20 @@
   background-color: #e7e7e7;
 }
 </style>
+
+<script>
+  $(document).on("click","a[name='notificationIcon']", function (e) {
+    $.notify({
+      icon: 'glyphicon glyphicon-exclamation-sign',
+      title: ' Current Opportunities: ',
+      message: ' 8, View on Tasks Page',
+      url: '<%= allocated_tasks_index_path%>',
+      target: '_self'
+    },{
+      delay: '70000',
+      type: 'info',
+    });
+  });
+</script>
 </body>
 </html>
