--- a/app/views/browse/search.html.erb
+++ b/app/views/browse/search.html.erb
@@ -1,4 +1,3 @@
-
 <body>
   <div class="jumbotron">
   <div class="upper-search-box">
@@ -138,4 +137,26 @@
      </tbody>
   </table>
   </div>
+
+  <script>
+      window.onload = function() {
+      console.log("Inside function");
+      if (document.cookie.indexOf('mycookie')==-1) {
+      	console.log("This is a NOT a Refresh");
+        // cookie doesn't exist, create it now
+        document.cookie = 'mycookie=1';
+      }
+      else {
+      	console.log("This is a Refresh and "+ document.cookie.indexOf('mycookie'));
+      	// reset cookie
+        delete_cookie('mycookie');
+        // not first visit, so alert
+        location.href = '<%=browse_index_path%>';
+      }
+    }
+
+    function delete_cookie( name ) {
+  document.cookie = name + '=; expires=Thu, 01 Jan 1970 00:00:01 GMT;';
+}
+  </script> 
 </body>
