--- a/app/views/browse/search.html.erb
+++ b/app/views/browse/search.html.erb
@@ -142,7 +142,7 @@
       window.onload = function() {
       console.log("Inside function");
       if (document.cookie.indexOf('mycookie')==-1) {
-      	console.log("This is a NOT a Refresh");
+      	console.log("This is NOT a Refresh");
         // cookie doesn't exist, create it now
         document.cookie = 'mycookie=1';
       }
